# url-shortener-fullstack

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 6235b00745f2_create_users_table.py  e3f520408b4f_create_clicks_table.py  f9c684ceb190_create_links_table.py
app/: main.py
app/api/: admin.py  auth.py  links.py  redirect.py
app/core/: config.py  dependencies.py  logger.py  security.py
app/db/: session.py
app/models/: click.py  link.py  user.py
app/schemas/: link.py  user.py
app/services/: cache_service.py  click_event_service.py  click_service.py  link_service.py  user_service.py
app/utils/: short_code.py
app/workers/: click_worker.py
frontend/: .gitignore  index.html
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  Signup.jsx
tests/: conftest.py  test_auth.py  test_links.py
