[project]
name = "url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "psycopg[binary]>=3.3.4",
    "psycopg2-binary>=2.9.12",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
    "greenlet>=3.5.1",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5",
    "email-validator>=2.3.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.30",
    "pydantic-settings>=2.14.1",
    "asyncpg>=0.31.0",
    "python-json-logger>=4.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
]
